--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 
 
 <li>
-   <form id="userform" style="display:none" class="same" method="post" action="/comment">
+   <form id="userform" style="display:none" class="same" method="post" action="#">
 	       
 	       <pre>Add Comment <textarea name="comments"></textarea></pre>
 	     	<button type="submit" >Add Comment</button>
