--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,9 @@
 </center>
 
 <div class="content">
-<ul>
+<ul style="list-style-type:none;">
+	
+</style>
 <%for(var i=0;i<result.length;i++){%>
 	
  <%var status="Like"%>		
